add step for create production build

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,3 +19,7 @@ jobs:
 
       - name: Check style
         run: npm run eslint
+
+      - name: Create production build
+        run: npm run build
+
