--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "eslint-fix": "eslint --fix './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
