fly workflow set to run only after deployment pipeline is completed

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,8 +1,8 @@
 name: Fly Deploy
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ['Deployment pipeline']
+    types: [completed]
 
 jobs:
   deploy:
