--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -39,3 +40,9 @@ jobs:
             start: npm run start-prod
             wait-on: http://localhost:5000
         if: steps.test-jest.outcome == 'success'
+
+      - name: Deploy to fly
+        run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN}}
+        if: steps.test-e2e.outcome == 'success'
