--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,17 +32,17 @@ jobs:
         run: npm run test
         if: steps.build-prod.outcome == 'success'
 
-      - name: e2e tests
-        id: test-e2e
-        uses: cypress-io/github-action@v6
-        with:
-            command: npm run test:e2e
-            start: npm run start-prod
-            wait-on: http://localhost:5000
-        if: steps.test-jest.outcome == 'success'
+      # - name: e2e tests
+      #   id: test-e2e
+      #   uses: cypress-io/github-action@v6
+      #   with:
+      #       command: npm run test:e2e
+      #       start: npm run start-prod
+      #       wait-on: http://localhost:5000
+      #   if: steps.test-jest.outcome == 'success'
 
       - name: Deploy to fly
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN}}
-        if: steps.test-e2e.outcome == 'success'
+        # if: steps.test-e2e.outcome == 'success'
