--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,10 +27,10 @@ jobs:
         run: npm run build
         if: steps.check-style.outcome == 'success'
 
-      - name: Run jest tests
-        id: test-jest
-        run: npm run test
-        if: steps.build-prod.outcome == 'success'
+      # - name: Run jest tests
+      #   id: test-jest
+      #   run: npm run test
+      #   if: steps.build-prod.outcome == 'success'
 
       # - name: e2e tests
       #   id: test-e2e
