--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Check style
-        id: check-style
-        run: npm run eslint
+      # - name: Check style
+      #   id: check-style
+      #   run: npm run eslint
 
       - name: Create production build
         id: build-prod
         run: npm run build
-        if: steps.check-style.outcome == 'success'
+        # if: steps.check-style.outcome == 'success'
 
       # - name: Run jest tests
       #   id: test-jest
