--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,4 +48,4 @@ jobs:
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN}}
-        if: steps.test-e2e.outcome == 'success'
+        if: ${{ (steps.test-e2e.outcome == 'success') && ( github.event_name == 'push' )}}
