--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Deploy to fly
         run: flyctl deploy --remote-only
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN}}
-        if: ${{ (steps.test-e2e.outcome == 'success') && ( github.event_name == 'push' )}}
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        if: ${{ (steps.test-e2e.outcome == 'success') && ( github.event_name == 'push' ) && !contains(toJson(github.event.commits.*.message), '#skip') }}
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
@@ -59,4 +59,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
-        if: ${{ github.event_name == 'push'}}
+        if: ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip')}}
