--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,6 +49,7 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         if: ${{ (steps.test-e2e.outcome == 'success') && ( github.event_name == 'push' ) && !contains(toJson(github.event.commits.*.message), '#skip') }}
+
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
@@ -60,3 +61,19 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
         if: ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip')}}
+
+      - name: Discord success notification
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+            details: A new version of Pokedex has been successfully deployed!
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            severity: info
+
+      - name: Discord failure notification
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+            details: Build failed
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            severity: error
