--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,6 +50,14 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         if: ${{ (steps.test-e2e.outcome == 'success') && ( github.event_name == 'push' ) && !contains(toJson(github.event.commits.*.message), '#skip') }}
 
+      - name: Discord failure notification
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+            details: Build failed
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            severity: error
+
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
